tests/src/frontend/typechecking/invalid/lvalue_tuple_1.sk
fun main(): void {
  (_, _) = (1, 2, 3);
  print_raw("FAIL")
}
